--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav>
+      <div class="navTop">
+        <div class="navItem">
+          <img src="images/logo.png" width="100px" alt="logo" />
+        </div>
+        <div class="navItem">
+          <div class="search">
+            <input type="text" placeholder="Search..." class="searchInput" />
+            <img src="images/search.png" width="20" height="20" alt="search" />
+          </div>
+        </div>
+        <div class="navItem">
+          <span class="limitedOffer">Limited Offer!</span>
+        </div>
+      </div>
+      <div class="navBottom">
+        <h3 class="menuItem">Home</h3>
+        <h3 class="menuItem">Images</h3>
+        <h3 class="menuItem">Activities</h3>
+        <h3 class="menuItem">Blog</h3>
+        <h3 class="menuItem">Contact</h3>
+      </div>
+    </nav>
     <h1>Hello Torrenostra</h1>
   </body>
   <script src="app.js"></script>
