--- a/index.html
+++ b/index.html
@@ -37,6 +37,70 @@
       </div>
     </nav>
     <h1>Hello Torrenostra</h1>
+    <div class="slider">
+      <div class="sliderWrapper">
+        <div class="sliderItem">
+          <div class="sliderBg">
+            <img src="images/1.jpg" alt="sea" class="sliderImg" />
+          </div>
+          <h1 class="sliderTitle">THE SEA</h1>
+          <h2 class="sliderDesc">awaits you...</h2>
+          <button class="visitButton">VISIT</button>
+        </div>
+        <div class="sliderItem">
+          <div class="sliderBg">
+            <img
+              src="images/2.jpg"
+              height="300px"
+              alt="sea"
+              class="sliderImg"
+            />
+          </div>
+          <h1 class="sliderTitle">THE SAND</h1>
+          <h2 class="sliderDesc">awaits you...</h2>
+          <button class="visitButton">VISIT</button>
+        </div>
+        <div class="sliderItem">
+          <div class="sliderBg">
+            <img
+              src="images/3.jpg"
+              height="300px"
+              alt="sea"
+              class="sliderImg"
+            />
+          </div>
+          <h1 class="sliderTitle">THE WATER</h1>
+          <h2 class="sliderDesc">awaits you...</h2>
+          <button class="visitButton">VISIT</button>
+        </div>
+        <div class="sliderItem">
+          <div class="sliderBg">
+            <img
+              src="images/4.jpg"
+              height="300px"
+              alt="sea"
+              class="sliderImg"
+            />
+          </div>
+          <h1 class="sliderTitle">THE SILENCE</h1>
+          <h2 class="sliderDesc">awaits you...</h2>
+          <button class="visitButton">VISIT</button>
+        </div>
+        <div class="sliderItem">
+          <div class="sliderBg">
+            <img
+              src="images/5.jpg"
+              height="300px"
+              alt="sea"
+              class="sliderImg"
+            />
+          </div>
+          <h1 class="sliderTitle">THE SUN</h1>
+          <h2 class="sliderDesc">awaits you...</h2>
+          <button class="visitButton">VISIT</button>
+        </div>
+      </div>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
