--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
         <h3 class="menuItem">Contact</h3>
       </div>
     </nav>
-    <h1>Hello Torrenostra</h1>
+    <div class="imagesArea">
+      <h1>Hello Torrenostra</h1>
+      <div class="changeButtons">
+        <button class="menuButton">SEA ⛵</button>
+        <button class="menuButton">SAND ⌛</button>
+        <button class="menuButton">WATER 🤽‍♀️</button>
+        <button class="menuButton">SILENCE 😶</button>
+        <button class="menuButton">SUN 🌞</button>
+      </div>
+    </div>
     <div class="slider">
       <div class="sliderWrapper">
         <div class="sliderItem">
@@ -49,12 +58,7 @@
         </div>
         <div class="sliderItem">
           <div class="sliderBg">
-            <img
-              src="images/2.jpg"
-              height="300px"
-              alt="sea"
-              class="sliderImg"
-            />
+            <img src="images/2.jpg" alt="sea" class="sliderImg" />
           </div>
           <h1 class="sliderTitle">THE SAND</h1>
           <h2 class="sliderDesc">awaits you...</h2>
@@ -62,12 +66,7 @@
         </div>
         <div class="sliderItem">
           <div class="sliderBg">
-            <img
-              src="images/3.jpg"
-              height="300px"
-              alt="sea"
-              class="sliderImg"
-            />
+            <img src="images/3.jpg" alt="sea" class="sliderImg" />
           </div>
           <h1 class="sliderTitle">THE WATER</h1>
           <h2 class="sliderDesc">awaits you...</h2>
@@ -75,12 +74,7 @@
         </div>
         <div class="sliderItem">
           <div class="sliderBg">
-            <img
-              src="images/4.jpg"
-              height="300px"
-              alt="sea"
-              class="sliderImg"
-            />
+            <img src="images/4.jpg" alt="sea" class="sliderImg" />
           </div>
           <h1 class="sliderTitle">THE SILENCE</h1>
           <h2 class="sliderDesc">awaits you...</h2>
@@ -88,12 +82,7 @@
         </div>
         <div class="sliderItem">
           <div class="sliderBg">
-            <img
-              src="images/5.jpg"
-              height="300px"
-              alt="sea"
-              class="sliderImg"
-            />
+            <img src="images/5.jpg" alt="sea" class="sliderImg" />
           </div>
           <h1 class="sliderTitle">THE SUN</h1>
           <h2 class="sliderDesc">awaits you...</h2>
