--- a/index.html
+++ b/index.html
@@ -90,6 +90,63 @@
         </div>
       </div>
     </div>
+    <div class="reviews">
+      <div class="review">
+        <img src="./images/r1.jpg" alt="" class="reviewImg" />
+        <span class="reviewTitle">RELAXATION</span>
+        <span class="reviewDesc">Battery charger! Spectacular views!</span>
+      </div>
+      <div class="review">
+        <img src="./images/r2.jpg" alt="" class="reviewImg" />
+        <span class="reviewTitle">SWIM</span>
+        <span class="reviewDesc">Warm water!</span>
+      </div>
+      <div class="review">
+        <img src="./images/r3.jpg" alt="" class="reviewImg" />
+        <span class="reviewTitle">WALKS</span>
+        <span class="reviewDesc">3.5 km walk to the village</span>
+      </div>
+      <div class="review">
+        <img src="./images/r4.jpg" alt="" class="reviewImg" />
+        <span class="reviewTitle">BOATS</span>
+        <span class="reviewDesc">Fish! Visit!</span>
+      </div>
+      <div class="review">
+        <img src="./images/r5.jpg" alt="" class="reviewImg" />
+        <span class="reviewTitle">TRAIN</span>
+        <span class="reviewDesc">VALENCIA=2h BARCELONA=4h</span>
+      </div>
+      <div class="review">
+        <img src="./images/r6.jpg" alt="" class="reviewImg" />
+        <span class="reviewTitle">RESTAURANTS</span>
+        <span class="reviewDesc">Red wine! Paella! </span>
+      </div>
+      <div class="review">
+        <img src="./images/r7.jpg" alt="" class="reviewImg" />
+        <span class="reviewTitle">MARKET</span>
+        <span class="reviewDesc">Tuesdays market</span>
+      </div>
+      <div class="review">
+        <img src="./images/r8.jpg" alt="" class="reviewImg" />
+        <span class="reviewTitle">ART</span>
+        <span class="reviewDesc">Spectacular photos!</span>
+      </div>
+      <div class="review">
+        <img src="./images/r9.jpg" alt="" class="reviewImg" />
+        <span class="reviewTitle">PRAT</span>
+        <span class="reviewDesc"> Natural park!</span>
+      </div>
+      <div class="review">
+        <img
+          src="./images/r10.jpg"
+          class="reviewImg"
+          alt=""
+          class="reviewImg"
+        />
+        <span class="reviewTitle">BIKE</span>
+        <span class="reviewDesc">Ride to explore!</span>
+      </div>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
