add product section

--- a/index.html
+++ b/index.html
@@ -147,6 +147,32 @@
         <span class="reviewDesc">Ride to explore!</span>
       </div>
     </div>
+    <div class="product">
+      <img src="/images/p1.jpg" width="200px" alt="" class="productImg" />
+      <div class="productDetails">
+        <h1 class="productTitle">FamilyART</h1>
+        <h2 class="productPrice">£50</h2>
+        <p class="productDesc">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+          quos pariatur delectus perferendis doloremque, ex perspiciatis
+          dignissimos magnam illum ut necessitatibus minus nobis itaque amet
+          dolore placeat voluptatem ipsum deserunt!
+        </p>
+
+        <div class="colors">
+          <div class="color"></div>
+          <div class="color"></div>
+          <div class="color"></div>
+          <div class="color"></div>
+        </div>
+        <div class="sizes">
+          <div class="size">S</div>
+          <div class="size">M</div>
+          <div class="size">L</div>
+        </div>
+        <button class="productButton">BUY NOW!</button>
+      </div>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
