--- a/index.html
+++ b/index.html
@@ -147,11 +147,23 @@
         <span class="reviewDesc">Ride to explore!</span>
       </div>
     </div>
+    <h1>Order Your Memories</h1>
+    <div class="selectProducts">
+      <button class="selectProduct">FamilyArt</button>
+      <button class="selectProduct">Butterfly Art</button>
+      <button class="selectProduct">Heart Art</button>
+      <button class="selectProduct">Wind Chime</button>
+    </div>
     <div class="product">
-      <img src="/images/p1.jpg" width="200px" alt="" class="productImg" />
+      <img
+        src="/images/p1-turquoise.jpg"
+        width="200px"
+        alt=""
+        class="productImg"
+      />
       <div class="productDetails">
-        <h1 class="productTitle">FamilyART</h1>
-        <h2 class="productPrice">£50</h2>
+        <h1 class="productTitle">Family Art</h1>
+        <h2 class="productPrice">50€</h2>
         <p class="productDesc">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
           quos pariatur delectus perferendis doloremque, ex perspiciatis
@@ -160,6 +172,7 @@
         </p>
 
         <div class="colors">
+          <div class="color"></div>
           <div class="color"></div>
           <div class="color"></div>
           <div class="color"></div>
