--- a/index.html
+++ b/index.html
@@ -186,6 +186,19 @@
         <button class="productButton">BUY NOW!</button>
       </div>
     </div>
+    <div class="payment">
+      <h1 class="payTitle">Personal Information</h1>
+      <label for="">Name and Surname</label>
+      <input type="text" placeholder="John Doe" class="payInput" />
+      <label for="">Phone Number</label>
+      <input type="text" placeholder="+1 234 5678" class="payInput" />
+      <label for="">Address</label>
+      <input
+        type="text"
+        placeholder="Elton Street 21 22-345"
+        class="payInput"
+      />
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
