card information and payment to display and hide on clicking the buy button

--- a/index.html
+++ b/index.html
@@ -198,6 +198,24 @@
         placeholder="Elton Street 21 22-345"
         class="payInput"
       />
+      <h1 class="payTitle">Card Information</h1>
+      <div class="cardIcons">
+        <img src="./images/visa.png" alt="visa" width="40" class="cardIcon" />
+        <img
+          src="./images/mastercard.png"
+          alt="mastercard"
+          width="40"
+          class="cardIcon"
+        />
+      </div>
+      <input type="password" class="payInput" placeholder="Card Number" />
+      <div class="cardInfo">
+        <input type="text" placeholder="mm" class="payInput sm" />
+        <input type="text" placeholder="yyyy" class="payInput sm" />
+        <input type="text" placeholder="cvv" class="payInput sm" />
+      </div>
+      <button class="payButton">Checkout!</button>
+      <span class="close">X</span>
     </div>
   </body>
   <script src="app.js"></script>
