--- a/index.html
+++ b/index.html
@@ -217,6 +217,24 @@
       <button class="payButton">Checkout!</button>
       <span class="close">X</span>
     </div>
+    <div class="gallery">
+      <div class="galleryItem">
+        <h1 class="galleryTitle">Breathe</h1>
+        <img src="./images/g1.jpg" alt="" class="galleryImg" />
+      </div>
+      <div class="galleryItem">
+        <img src="./images/g2.jpg" alt="" class="galleryImg" />
+        <h1 class="galleryTitle">Enjoy</h1>
+      </div>
+      <div class="galleryItem">
+        <h1 class="galleryTitle">Smile</h1>
+        <img src="./images/g3.jpg" alt="" class="galleryImg" />
+      </div>
+      <div class="galleryItem">
+        <img src="./images/g4.jpg" alt="" class="galleryImg" />
+        <h1 class="galleryTitle">Be Nice</h1>
+      </div>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
