modif to video section

--- a/index.html
+++ b/index.html
@@ -235,8 +235,6 @@
         <h1 class="galleryTitle">Be Nice</h1>
       </div>
     </div>
-<<<<<<< HEAD
-=======
 
     <!-- <div class="videos">
      
@@ -293,6 +291,7 @@
         </video>
       </div> -->
 
+    <h1>View Torrenostra</h1>
     <div class="videos">
       <!-- Torrenostra 1 -->
       <div class="video">
@@ -342,6 +341,7 @@
       </div>
 
       <!-- Torrenostra 4 -->
+
       <div class="video">
         <iframe
           src="https://www.youtube.com/embed/FjaTV3idtM8"
@@ -358,7 +358,6 @@
         </a>
       </div>
     </div>
->>>>>>> 7964c1c (add video links)
   </body>
   <script src="app.js"></script>
 </html>
