--- a/index.html
+++ b/index.html
@@ -36,17 +36,18 @@
         <h3 class="menuItem">Contact</h3>
       </div>
     </nav>
-    <div class="imagesArea">
-      <h1>Hello Torrenostra</h1>
-      <div class="changeButtons">
-        <button class="menuButton">SEA ⛵</button>
-        <button class="menuButton">SAND ⌛</button>
-        <button class="menuButton">WATER 🤽‍♀️</button>
-        <button class="menuButton">SILENCE 😶</button>
-        <button class="menuButton">SUN 🌞</button>
+
+    <section class="slider">
+      <div class="imagesArea">
+        <h1>Hello Torrenostra</h1>
+        <div class="changeButtons">
+          <button class="menuButton">SEA ⛵</button>
+          <button class="menuButton">SAND ⌛</button>
+          <button class="menuButton">WATER 🤽‍♀️</button>
+          <button class="menuButton">SILENCE 😶</button>
+          <button class="menuButton">SUN 🌞</button>
+        </div>
       </div>
-    </div>
-    <div class="slider">
       <div class="sliderWrapper">
         <div class="sliderItem">
           <div class="sliderBg">
@@ -89,104 +90,71 @@
           <button class="visitButton">VISIT</button>
         </div>
       </div>
-    </div>
-    <div class="reviews">
-      <div class="review">
-        <img src="./images/r1.jpg" alt="" class="reviewImg" />
-        <span class="reviewTitle">RELAXATION</span>
-        <span class="reviewDesc">Battery charger! Spectacular views!</span>
-      </div>
-      <div class="review">
-        <img src="./images/r2.jpg" alt="" class="reviewImg" />
-        <span class="reviewTitle">SWIM</span>
-        <span class="reviewDesc">Warm water!</span>
-      </div>
-      <div class="review">
-        <img src="./images/r3.jpg" alt="" class="reviewImg" />
-        <span class="reviewTitle">WALKS</span>
-        <span class="reviewDesc">3.5 km walk to the village</span>
-      </div>
-      <div class="review">
-        <img src="./images/r4.jpg" alt="" class="reviewImg" />
-        <span class="reviewTitle">BOATS</span>
-        <span class="reviewDesc">Fish! Visit!</span>
-      </div>
-      <div class="review">
-        <img src="./images/r5.jpg" alt="" class="reviewImg" />
-        <span class="reviewTitle">TRAIN</span>
-        <span class="reviewDesc">VALENCIA=2h BARCELONA=4h</span>
-      </div>
-      <div class="review">
-        <img src="./images/r6.jpg" alt="" class="reviewImg" />
-        <span class="reviewTitle">RESTAURANTS</span>
-        <span class="reviewDesc">Red wine! Paella! </span>
-      </div>
-      <div class="review">
-        <img src="./images/r7.jpg" alt="" class="reviewImg" />
-        <span class="reviewTitle">MARKET</span>
-        <span class="reviewDesc">Tuesdays market</span>
-      </div>
-      <div class="review">
-        <img src="./images/r8.jpg" alt="" class="reviewImg" />
-        <span class="reviewTitle">ART</span>
-        <span class="reviewDesc">Spectacular photos!</span>
-      </div>
-      <div class="review">
-        <img src="./images/r9.jpg" alt="" class="reviewImg" />
-        <span class="reviewTitle">PRAT</span>
-        <span class="reviewDesc"> Natural park!</span>
-      </div>
-      <div class="review">
-        <img
-          src="./images/r10.jpg"
-          class="reviewImg"
-          alt=""
-          class="reviewImg"
-        />
-        <span class="reviewTitle">BIKE</span>
-        <span class="reviewDesc">Ride to explore!</span>
-      </div>
-    </div>
-    <h1>Order Your Memories</h1>
-    <div class="selectProducts">
-      <button class="selectProduct">FamilyArt</button>
-      <button class="selectProduct">Butterfly Art</button>
-      <button class="selectProduct">Heart Art</button>
-      <button class="selectProduct">Wind Chime</button>
-    </div>
-    <div class="product">
-      <img
-        src="/images/p1-turquoise.jpg"
-        width="200px"
-        alt=""
-        class="productImg"
-      />
-      <div class="productDetails">
-        <h1 class="productTitle">Family Art</h1>
-        <h2 class="productPrice">50€</h2>
-        <p class="productDesc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
-          quos pariatur delectus perferendis doloremque, ex perspiciatis
-          dignissimos magnam illum ut necessitatibus minus nobis itaque amet
-          dolore placeat voluptatem ipsum deserunt!
-        </p>
+    </section>
 
-        <div class="colors">
-          <div class="color"></div>
-          <div class="color"></div>
-          <div class="color"></div>
-          <div class="color"></div>
-          <div class="color"></div>
+    <section class="reviewsSection">
+      <h1>Things to do</h1>
+      <div class="reviews">
+        <div class="review">
+          <img src="./images/r1.jpg" alt="" class="reviewImg" />
+          <span class="reviewTitle">RELAXATION</span>
+          <span class="reviewDesc">Battery charger! Spectacular views!</span>
         </div>
-        <div class="sizes">
-          <div class="size">S</div>
-          <div class="size">M</div>
-          <div class="size">L</div>
+        <div class="review">
+          <img src="./images/r2.jpg" alt="" class="reviewImg" />
+          <span class="reviewTitle">SWIM</span>
+          <span class="reviewDesc">Warm water!</span>
         </div>
-        <button class="productButton">BUY NOW!</button>
+        <div class="review">
+          <img src="./images/r3.jpg" alt="" class="reviewImg" />
+          <span class="reviewTitle">WALKS</span>
+          <span class="reviewDesc">3.5 km walk to the village</span>
+        </div>
+        <div class="review">
+          <img src="./images/r4.jpg" alt="" class="reviewImg" />
+          <span class="reviewTitle">BOATS</span>
+          <span class="reviewDesc">Fish! Visit!</span>
+        </div>
+        <div class="review">
+          <img src="./images/r8.jpg" alt="" class="reviewImg" />
+          <span class="reviewTitle">ART</span>
+          <span class="reviewDesc">Spectacular photos!</span>
+        </div>
+        <div class="review">
+          <img src="./images/r5.jpg" alt="" class="reviewImg" />
+          <span class="reviewTitle">TRAIN</span>
+          <span class="reviewDesc">VALENCIA=2h BARCELONA=4h</span>
+        </div>
+        <div class="review">
+          <img src="./images/r6.jpg" alt="" class="reviewImg" />
+          <span class="reviewTitle">RESTAURANTS</span>
+          <span class="reviewDesc">Red wine! Paella! </span>
+        </div>
+        <div class="review">
+          <img src="./images/r7.jpg" alt="" class="reviewImg" />
+          <span class="reviewTitle">MARKET</span>
+          <span class="reviewDesc">Tuesdays market</span>
+        </div>
+
+        <div class="review">
+          <img src="./images/r9.jpg" alt="" class="reviewImg" />
+          <span class="reviewTitle">PRAT</span>
+          <span class="reviewDesc"> Natural park!</span>
+        </div>
+        <div class="review">
+          <img
+            src="./images/r10.jpg"
+            class="reviewImg"
+            alt=""
+            class="reviewImg"
+          />
+          <span class="reviewTitle">BIKE</span>
+          <span class="reviewDesc">Ride to explore!</span>
+        </div>
       </div>
-    </div>
-    <div class="payment">
+    </section>
+
+    <section class="payment">
       <h1 class="payTitle">Personal Information</h1>
       <label for="">Name and Surname</label>
       <input type="text" placeholder="John Doe" class="payInput" />
@@ -216,30 +184,35 @@
       </div>
       <button class="payButton">Checkout!</button>
       <span class="close">X</span>
-    </div>
-    <div class="gallery">
-      <div class="galleryItem">
-        <h1 class="galleryTitle">Breathe</h1>
-        <img src="./images/g1.jpg" alt="" class="galleryImg" />
+    </section>
+    <section class="gallery">
+      <div class="galleryH1">
+        <h1>Best Images</h1>
       </div>
-      <div class="galleryItem">
-        <img src="./images/g2.jpg" alt="" class="galleryImg" />
-        <h1 class="galleryTitle">Enjoy</h1>
+      <div class="galleryItems">
+        <div class="galleryItem">
+          <h1 class="galleryTitle">Breathe</h1>
+          <img src="./images/g1.jpg" alt="" class="galleryImg" />
+        </div>
+        <div class="galleryItem">
+          <img src="./images/g2.jpg" alt="" class="galleryImg" />
+          <h1 class="galleryTitle">Enjoy</h1>
+        </div>
+        <div class="galleryItem">
+          <h1 class="galleryTitle">Smile</h1>
+          <img src="./images/g3.jpg" alt="" class="galleryImg" />
+        </div>
+        <div class="galleryItem">
+          <img src="./images/g4.jpg" alt="" class="galleryImg" />
+          <h1 class="galleryTitle">Be Nice</h1>
+        </div>
       </div>
-      <div class="galleryItem">
-        <h1 class="galleryTitle">Smile</h1>
-        <img src="./images/g3.jpg" alt="" class="galleryImg" />
-      </div>
-      <div class="galleryItem">
-        <img src="./images/g4.jpg" alt="" class="galleryImg" />
-        <h1 class="galleryTitle">Be Nice</h1>
-      </div>
-    </div>
+    </section>
 
     <!-- <div class="videos">
      
 
-      <!-- <div class="video">
+       <div class="video">
         <a
           href="https://youtube.com/shorts/Dsspp3M3q8k?feature=share"
           target="_blank"
@@ -291,73 +264,124 @@
         </video>
       </div> -->
 
-    <h1>View Torrenostra</h1>
-    <div class="videos">
+    <section class="videosSection">
+      <div class="videosH1"><h1>View Torrenostra</h1></div>
       <!-- Torrenostra 1 -->
-      <div class="video">
-        <iframe
-          src="https://www.youtube.com/embed/Dsspp3M3q8k"
-          title="Torrenostra Video 1"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-        <a
-          href="https://www.youtube.com/embed/Dsspp3M3q8k"
-          target="_blank"
-          class="overlay"
-        >
-          <h1>View Torrenostra 1</h1>
-        </a>
+      <div class="videos">
+        <div class="video">
+          <iframe
+            src="https://www.youtube.com/embed/Dsspp3M3q8k"
+            title="Torrenostra Video 1"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+          <a
+            href="https://www.youtube.com/embed/Dsspp3M3q8k"
+            target="_blank"
+            class="overlay"
+          >
+            <h1>View Torrenostra 1</h1>
+          </a>
+        </div>
+
+        <!-- Torrenostra 2 -->
+        <div class="video">
+          <iframe
+            src="https://www.youtube.com/embed/3TNiflED78Y?si=AG7-7ErANmohxbMk"
+            title="Torrenostra Video 2"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+          <a
+            href="https://youtu.be/3TNiflED78Y"
+            target="_blank"
+            class="overlay"
+          >
+            <h1>View Torrenostra 2</h1>
+          </a>
+        </div>
+
+        <!-- Torrenostra 3 -->
+        <div class="video">
+          <iframe
+            src="https://www.youtube.com/embed/P-wWQmqZ0TE"
+            title="Torrenostra Video 3"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+          <a
+            href="https://youtube.com/shorts/P-wWQmqZ0TE?feature=share"
+            target="_blank"
+            class="overlay"
+          >
+            <h1>View Torrenostra 3</h1>
+          </a>
+        </div>
+
+        <!-- Torrenostra 4 -->
+
+        <div class="video">
+          <iframe
+            src="https://www.youtube.com/embed/FjaTV3idtM8"
+            title="Torrenostra Video 4"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+          <a
+            href="https://youtube.com/shorts/FjaTV3idtM8?feature=share"
+            target="_blank"
+            class="overlay"
+          >
+            <h1>View Torrenostra 4</h1>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section class="selectProducts">
+      <div class="productButtons">
+        <h1>Order Your Memories</h1>
+        <div class="selectProductButtons">
+          <button class="selectProduct">FamilyArt</button>
+          <button class="selectProduct">Butterfly Art</button>
+          <button class="selectProduct">Heart Art</button>
+          <button class="selectProduct">Wind Chime</button>
+        </div>
       </div>
 
-      <!-- Torrenostra 2 -->
-      <div class="video">
-        <iframe
-          src="https://www.youtube.com/embed/3TNiflED78Y?si=AG7-7ErANmohxbMk"
-          title="Torrenostra Video 2"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-        <a href="https://youtu.be/3TNiflED78Y" target="_blank" class="overlay">
-          <h1>View Torrenostra 2</h1>
-        </a>
-      </div>
+      <div class="product">
+        <img
+          src="/images/p1-turquoise.jpg"
+          width="200px"
+          alt=""
+          class="productImg"
+        />
+        <div class="productDetails">
+          <h1 class="productTitle">Family Art</h1>
+          <h2 class="productPrice">50€</h2>
+          <p class="productDesc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+            quos pariatur delectus perferendis doloremque, ex perspiciatis
+            dignissimos magnam illum ut necessitatibus minus nobis itaque amet
+            dolore placeat voluptatem ipsum deserunt!
+          </p>
 
-      <!-- Torrenostra 3 -->
-      <div class="video">
-        <iframe
-          src="https://www.youtube.com/embed/P-wWQmqZ0TE"
-          title="Torrenostra Video 3"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-        <a
-          href="https://youtube.com/shorts/P-wWQmqZ0TE?feature=share"
-          target="_blank"
-          class="overlay"
-        >
-          <h1>View Torrenostra 3</h1>
-        </a>
+          <div class="colors">
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+          </div>
+          <div class="sizes">
+            <div class="size">S</div>
+            <div class="size">M</div>
+            <div class="size">L</div>
+          </div>
+          <button class="productButton">BUY NOW!</button>
+        </div>
       </div>
-
-      <!-- Torrenostra 4 -->
-
-      <div class="video">
-        <iframe
-          src="https://www.youtube.com/embed/FjaTV3idtM8"
-          title="Torrenostra Video 4"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-        <a
-          href="https://youtube.com/shorts/FjaTV3idtM8?feature=share"
-          target="_blank"
-          class="overlay"
-        >
-          <h1>View Torrenostra 4</h1>
-        </a>
-      </div>
-    </div>
+    </section>
   </body>
   <script src="app.js"></script>
 </html>
