modified lofo and the display of nav... prepared the button to change light/dark mode

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>torrenostra</title>
+    <title>Torrenostra</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,19 +15,23 @@
   <body>
     <nav>
       <div class="navTop">
-        <div class="navItem">
-          <img src="images/logo.png" width="100px" alt="logo" />
+        <div class="navleft">
+          <div class="navItem">
+            <img src="images/logo2.png" width="100px" alt="logo" />
+          </div>
+          <div class="navSpan">
+            <span class="limitedOffer">Limited Offer!</span>
+          </div>
         </div>
-        <div class="navItem">
+        <div class="navright">
           <div class="search">
             <input type="text" placeholder="Search..." class="searchInput" />
             <img src="images/search.png" width="20" height="20" alt="search" />
           </div>
-        </div>
-        <div class="navItem">
-          <span class="limitedOffer">Limited Offer!</span>
+          <div class="toggle">🧨</div>
         </div>
       </div>
+
       <div class="navBottom">
         <h3 class="menuItem">Home</h3>
         <h3 class="menuItem">Images</h3>
@@ -39,7 +43,9 @@
 
     <section class="slider">
       <div class="imagesArea">
-        <h1>Hello Torrenostra</h1>
+        <div class="imagesAreaH1">
+          <h1>Hello Torrenostra</h1>
+        </div>
         <div class="changeButtons">
           <button class="menuButton">SEA ⛵</button>
           <button class="menuButton">SAND ⌛</button>
@@ -185,6 +191,7 @@
       <button class="payButton">Checkout!</button>
       <span class="close">X</span>
     </section>
+
     <section class="gallery">
       <div class="galleryH1">
         <h1>Best Images</h1>
