--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -28,7 +32,11 @@
             <input type="text" placeholder="Search..." class="searchInput" />
             <img src="images/search.png" width="20" height="20" alt="search" />
           </div>
-          <div class="toggle">🧨</div>
+          <div class="toggle">
+            <i class="fa-solid fa-moon toggleIcon"></i>
+            <i class="fa-solid fa-sun toggleIcon"></i>
+            <div class="toggleBall"></div>
+          </div>
         </div>
       </div>
 
