added full scrreen for the images in the gallery

--- a/index.html
+++ b/index.html
@@ -207,22 +207,27 @@
       <div class="galleryItems">
         <div class="galleryItem">
           <h1 class="galleryTitle">Breathe</h1>
-          <img src="./images/g1.jpg" alt="" class="galleryImg" />
+          <img src="./images/g1.jpg" alt="Breathe" class="galleryImg" />
         </div>
         <div class="galleryItem">
-          <img src="./images/g2.jpg" alt="" class="galleryImg" />
+          <img src="./images/g2.jpg" alt="Enjoy" class="galleryImg" />
           <h1 class="galleryTitle">Enjoy</h1>
         </div>
         <div class="galleryItem">
           <h1 class="galleryTitle">Smile</h1>
-          <img src="./images/g3.jpg" alt="" class="galleryImg" />
+          <img src="./images/g3.jpg" alt="Smile" class="galleryImg" />
         </div>
         <div class="galleryItem">
-          <img src="./images/g4.jpg" alt="" class="galleryImg" />
+          <img src="./images/g4.jpg" alt="Be Nice" class="galleryImg" />
           <h1 class="galleryTitle">Be Nice</h1>
         </div>
       </div>
     </section>
+    <!-- Fullscreen overlay -->
+    <div class="imageOverlay" id="imageOverlay">
+      <span class="closeBtn" id="closeBtn">&times;</span>
+      <img src="" alt="Fullscreen preview" class="fullImage" id="fullImage" />
+    </div>
 
     <!-- <div class="videos">
      
