--- a/index.html
+++ b/index.html
@@ -54,55 +54,59 @@
         <div class="imagesAreaH1">
           <h1>Hello Torrenostra</h1>
         </div>
-        <div class="changeButtons">
+        <!-- <div class="changeButtons">
           <button class="menuButton">SEA ⛵</button>
           <button class="menuButton">SAND ⌛</button>
           <button class="menuButton">WATER 🤽‍♀️</button>
           <button class="menuButton">SILENCE 😶</button>
           <button class="menuButton">SUN 🌞</button>
-        </div>
+        </div> -->
       </div>
-      <div class="sliderWrapper">
-        <div class="sliderItem">
-          <div class="sliderBg">
-            <img src="images/1.jpg" alt="sea" class="sliderImg" />
+      <div class="slider">
+        <div class="sliderWrapper">
+          <div class="sliderItem">
+            <div class="sliderBg">
+              <img src="images/1.jpg" alt="sea" class="sliderImg" />
+            </div>
+            <h1 class="sliderTitle">THE SEA</h1>
+            <h2 class="sliderDesc">awaits you...</h2>
+            <button class="visitButton">VISIT</button>
           </div>
-          <h1 class="sliderTitle">THE SEA</h1>
-          <h2 class="sliderDesc">awaits you...</h2>
-          <button class="visitButton">VISIT</button>
-        </div>
-        <div class="sliderItem">
-          <div class="sliderBg">
-            <img src="images/2.jpg" alt="sea" class="sliderImg" />
+          <div class="sliderItem">
+            <div class="sliderBg">
+              <img src="images/2.jpg" alt="sea" class="sliderImg" />
+            </div>
+            <h1 class="sliderTitle">THE SAND</h1>
+            <h2 class="sliderDesc">hot...</h2>
+            <button class="visitButton">VISIT</button>
           </div>
-          <h1 class="sliderTitle">THE SAND</h1>
-          <h2 class="sliderDesc">awaits you...</h2>
-          <button class="visitButton">VISIT</button>
-        </div>
-        <div class="sliderItem">
-          <div class="sliderBg">
-            <img src="images/3.jpg" alt="sea" class="sliderImg" />
+          <div class="sliderItem">
+            <div class="sliderBg">
+              <img src="images/3.jpg" alt="sea" class="sliderImg" />
+            </div>
+            <h1 class="sliderTitle">THE WATER</h1>
+            <h2 class="sliderDesc">warm...</h2>
+            <button class="visitButton">VISIT</button>
           </div>
-          <h1 class="sliderTitle">THE WATER</h1>
-          <h2 class="sliderDesc">awaits you...</h2>
-          <button class="visitButton">VISIT</button>
-        </div>
-        <div class="sliderItem">
-          <div class="sliderBg">
-            <img src="images/4.jpg" alt="sea" class="sliderImg" />
+          <div class="sliderItem">
+            <div class="sliderBg">
+              <img src="images/4.jpg" alt="sea" class="sliderImg" />
+            </div>
+            <h1 class="sliderTitle">THE SILENCE</h1>
+            <h2 class="sliderDesc">quietly...</h2>
+            <button class="visitButton">VISIT</button>
           </div>
-          <h1 class="sliderTitle">THE SILENCE</h1>
-          <h2 class="sliderDesc">awaits you...</h2>
-          <button class="visitButton">VISIT</button>
-        </div>
-        <div class="sliderItem">
-          <div class="sliderBg">
-            <img src="images/5.jpg" alt="sea" class="sliderImg" />
+          <div class="sliderItem">
+            <div class="sliderBg">
+              <img src="images/5.jpg" alt="sea" class="sliderImg" />
+            </div>
+            <h1 class="sliderTitle">THE SUN</h1>
+            <h2 class="sliderDesc">shines...</h2>
+            <button class="visitButton">VISIT</button>
           </div>
-          <h1 class="sliderTitle">THE SUN</h1>
-          <h2 class="sliderDesc">awaits you...</h2>
-          <button class="visitButton">VISIT</button>
         </div>
+        <i class="fa-solid fa-chevron-left arrowIcon left"></i>
+        <i class="fa-solid fa-chevron-right arrowIcon right"></i>
       </div>
     </section>
 
