light/dark mode

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
+    <nav class="nav">
       <div class="navTop">
         <div class="navleft">
           <div class="navItem">
@@ -33,8 +33,8 @@
             <img src="images/search.png" width="20" height="20" alt="search" />
           </div>
           <div class="toggle">
-            <i class="fa-solid fa-moon toggleIcon"></i>
             <i class="fa-solid fa-sun toggleIcon"></i>
+            <i class="fa-solid fa-moon toggleIcon"></i>
             <div class="toggleBall"></div>
           </div>
         </div>
