--- a/index.html
+++ b/index.html
@@ -352,7 +352,65 @@
         </div>
       </div>
     </section>
-    <footer id="contact">FooterContactArea</footer>
+
+    <footer id="contact">
+      <div class="footerLeft">
+        <div class="footerMenu">
+          <h1 class="fMenuTitle">Find Us</h1>
+          <div class="mapContainer">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3111.123456789!2d0.123456!3d39.123456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2sTorrenostra!5e0!3m2!1sen!2ses!4v1234567890"
+              width="100%"
+              height="200"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+        <div class="footerMenu">
+          <h1 class="fMenuTitle">Useful Links</h1>
+          <ul class="fList">
+            <li class="fListItem">Support</li>
+            <li class="fListItem">Refund</li>
+            <li class="fListItem">FAQ</li>
+            <li class="fListItem">Feedback</li>
+            <li class="fListItem">Stories</li>
+          </ul>
+        </div>
+        <div class="footerMenu">
+          <h1 class="fMenuTitle">Products</h1>
+          <ul class="fList">
+            <li class="fListItem">FamilyArt</li>
+            <li class="fListItem">Butterfly Art</li>
+            <li class="fListItem">Heart Art</li>
+            <li class="fListItem">Wind Chime</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footerRight">
+        <div class="footerRightMenu">
+          <h1 class="fMenuTitle">Subscribe to our Newsletter</h1>
+          <div class="fMAil">
+            <input type="text" placeholder="your@email.com" class="finput" />
+            <button class="fButton">Join!</button>
+          </div>
+        </div>
+        <div class="footerRightMenu">
+          <h1 class="fMenuTitle">Follow us</h1>
+          <div class="fIcons">
+            <img src="./icons/facebook.svg" alt="facebook" class="fIcon" />
+            <img src="./icons/twitter.svg" alt="facebook" class="fIcon" />
+            <img src="./icons/instagram.svg" alt="facebook" class="fIcon" />
+            <img src="./icons/whatsapp.svg" alt="facebook" class="fIcon" />
+          </div>
+        </div>
+        <div class="footerRightMenu">
+          <span class="copyright">@Kita. All Rights Reserved. 2025.</span>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="app.js"></script>
 </html>
