footer and sections css reviewd

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </nav>
 
-    <section id="home" class="slider">
+    <section id="home" class="sliderSection">
       <div class="imagesArea">
         <div class="imagesAreaH1">
           <h1>Hello Torrenostra</h1>
@@ -205,7 +205,7 @@
       <span class="close">X</span>
     </section>
 
-    <section id="gallery" class="gallery">
+    <section id="gallery" class="gallerySection">
       <div class="galleryH1">
         <h1>Images</h1>
       </div>
